--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "husky": "^3.0.5",
+    "lint-staged": "^9.2.5",
     "prettier": "1.18.2",
     "react-scripts": "3.1.1",
+    "tslint": "^5.20.0",
     "typescript": "^3.6.2"
   },
   "scripts": {
